--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Comatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dep-system</title>
+    <title>dep-Developer</title>
     <link rel="shortcut icon" href="./images/favi.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/estilos.css">
+
+    <!-- Primary Meta Tags -->
+<meta name="title" content="Rafael Josue Salazar - Desarrollador">
+<meta name="description" content="Desarrollador Backend - Mi portafolios de aplicaciones desarrolladas.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rafaelsalazarrojas.com/">
+<meta property="og:title" content="Rafael Josue Salazar - Desarrollador">
+<meta property="og:description" content="Desarrollador Backend - Mi portafolios de aplicaciones desarrolladas.">
+<meta property="og:image" content="./images/meta.jpeg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://rafaelsalazarrojas.com">
+<meta property="twitter:title" content="Rafael Josue Salazar - Desarrollador">
+<meta property="twitter:description" content="Desarrollador Backend - Mi portafolios de aplicaciones desarrolladas.">
+<meta property="twitter:image" content="./images/meta.jpeg">
    
     
 </head>
@@ -19,15 +37,15 @@
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Inicio</a>
+                    <a href="http://rafaelsalazarrojas.com" class="nav__links">Inicio</a>
                 </li>
 
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Descargar CV</a>
+                    <a href="https://drive.google.com/file/d/1HUobSn8vfZ9UBeS1_g7OFH35EuAC7YAX/view?usp=sharing" class="nav__links" target="_blank">Descargar CV</a>
                 </li>
 
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Metabit</a>
+                    <a href="http://medabit.space/" class="nav__links" target="_blank">Metabit</a>
                 </li>
 
                 <img src="./images/cerrado.svg" alt="" class="nav__close">
@@ -43,13 +61,13 @@
             <p class="hero__paragraph">
                 Técnico de Sistemas con mas de 10 años de experiencia en el rubro tecnológico, actualmente me estoy dedicando a la robotización de procesos y al desarrollo backend. Estoy emprendiendo un proyecto personal llamado Metabit. 
             </p>
-            <a href="" class="cta">Descargar CV</a>
+            <a href="https://drive.google.com/file/d/1HUobSn8vfZ9UBeS1_g7OFH35EuAC7YAX/view?usp=sharing" class="cta" target="_blank">Descargar CV</a>
             <div class="redes">
-                <a href="https://api.whatsapp.com/send?phone=51924626596&text=%F0%9F%92%BB%20Hola%20Rafael%F0%9F%92%BB"><img src="./images/Whatsapp.svg" alt=""></a>
-                <a href="https://www.twitch.tv/depardx"><img src="./images/twich.svg" alt=""></a>
-                <a href="https://www.linkedin.com/in/rafael-josue-salazar-rojas-11031045/"><img src="./images/linke.svg" alt=""></a>
-                <a href="https://discord.gg/4h2fNtd9"><img src="./images/discord.svg" alt=""></a>
-                <a href="https://github.com/Dep2015"><img src="./images/git.svg" alt=""></a>
+                <a href="https://api.whatsapp.com/send?phone=51924626596&text=%F0%9F%92%BB%20Hola%20Rafael%F0%9F%92%BB" target="_blank"><img src="./images/Whatsapp.svg" alt=""></a>
+                <a href="https://www.twitch.tv/depardx" target="_blank"><img src="./images/twich.svg" alt=""></a>
+                <a href="https://www.linkedin.com/in/rafael-josue-salazar-rojas-11031045/" target="_blank"><img src="./images/linke.svg" alt=""></a>
+                <a href="https://discord.gg/4h2fNtd9" target="_blank"><img src="./images/discord.svg" alt=""></a>
+                <a href="https://github.com/Dep2015" target="_blank"><img src="./images/git.svg" alt=""></a>
             </div>
         </section>
     </header>
@@ -88,7 +106,7 @@
                     <p class="knowledeg___paragraph">
                         Desde el año pasado estoy creando un proyecto personal llamado MetaBit enfocado en subir vídeos de programación, como desarrollo de juegos y  animación. Actualmente me encuentro en la etapa de desarrollo.
                     </p>
-                    <a href="#" class="cta">Visita mi proyecto</a>
+                    <a href="http://medabit.space/" class="cta" target="_blank">Visita mi proyecto</a>
                 </div>
 
                 <figure class="knowledge__picture">
@@ -405,7 +423,7 @@
                     <h2 class="subtitle"> Proyecto <span class="proyects__course">Juegos Free</span></h2>
                     <p class="poryects__review">Proyecto personal donde subo pequeños juegos creados en mis tiempos libres.
                     </p>
-                    <a href="" class="cta__proyect">Ver Proyecto</a>
+                    <a href="http://losjuegosder.site" class="cta__proyect">Ver Proyecto</a>
                 </div>
                 <figure class="proyects__picture">
                     <img src="./images/juegos.webp" alt="" class="proyects__img">
@@ -421,11 +439,11 @@
     <footer class="footer__container ">
         <section class="footer__body">
         <div class="footer__redes">
-            <a href="https://api.whatsapp.com/send?phone=51924626596&text=%F0%9F%92%BB%20Hola%20Rafael%F0%9F%92%BB"><img src="./images/Whatsapp.svg" alt=""></a>
-            <a href="https://www.twitch.tv/depardx"><img src="./images/twich.svg" alt=""></a>
-            <a href="https://www.linkedin.com/in/rafael-josue-salazar-rojas-11031045/"><img src="./images/linke.svg" alt=""></a>
-            <a href="https://discord.gg/4h2fNtd9"><img src="./images/discord.svg" alt=""></a>
-            <a href="https://github.com/Dep2015"><img src="./images/git.svg" alt=""></a>
+            <a href="https://api.whatsapp.com/send?phone=51924626596&text=%F0%9F%92%BB%20Hola%20Rafael%F0%9F%92%BB" target="_blank"><img src="./images/Whatsapp.svg" alt=""></a>
+            <a href="https://www.twitch.tv/depardx" target="_blank"><img src="./images/twich.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/rafael-josue-salazar-rojas-11031045/" target="_blank"><img src="./images/linke.svg" alt=""></a>
+            <a href="https://discord.gg/4h2fNtd9" target="_blank"><img src="./images/discord.svg" alt=""></a>
+            <a href="https://github.com/Dep2015" target="_blank"><img src="./images/git.svg" alt=""></a>
         </div>
     
         <h2 class="footer__text">Derechos Reservados &copy; Rafael Salazar Rojas</h2>
