--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__title">Depardx</h2>
+                <h2 class="nav__title">R.S. Backend</h2>
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
@@ -59,7 +59,7 @@
         <section class="hero__container container">
             <h1 class="hero__title"> Rafael Josue Salazar Rojas</h1>
             <p class="hero__paragraph">
-                Técnico de Sistemas con mas de 10 años de experiencia en el rubro tecnológico, actualmente me estoy dedicando a la robotización de procesos y al desarrollo backend. Estoy emprendiendo un proyecto personal llamado Metabit. 
+                Analista y desarrollador Senior TI con mas de 10 años de experiencia en el rubro tecnológico, actualmente me estoy dedicando a la robotización de procesos y al desarrollo backend. Estoy emprendiendo un proyecto personal llamado Metabit. 
             </p>
             <a href="https://drive.google.com/file/d/1HUobSn8vfZ9UBeS1_g7OFH35EuAC7YAX/view?usp=sharing" class="cta" target="_blank">Descargar CV</a>
             <div class="redes">
@@ -346,7 +346,7 @@
                     <p class="poryects__review">
                         Proyecto realizado cuando me encontraba laborando para la empresa Murdoch Sistemas. Este sistema estaba desarrollado en visual basic con base de datos sqlserver 2008, dirigido para un ambiente de escritorio interactuaba con detectores de huella dactilar o relojes de marcación para la asistencia del personal. Como ayuda para el área de RRHH contaba con diversos reportes que mostraban las horas laboradas y el pago mensual que debía abonarse al trabajador. 
                     </p>
-                    <a href="" class="cta__proyect">Ver Proyecto</a>
+                    <a href="./Control.html" class="cta__proyect">Ver Proyecto</a>
                 </div>
                 <figure class="proyects__picture">
                     <img src="./images/asistencia.jpeg" alt="" class="proyects__img">
